@@ -32,8 +32,10 @@ import co.elastic.apm.agent.util.JvmRuntimeInfo;
 import co.elastic.apm.agent.util.PackageScanner;
 import net.bytebuddy.asm.Advice;
 import net.bytebuddy.dynamic.loading.ClassInjector;
+import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.stagemonitor.util.IOUtils;
+import sun.misc.Unsafe;
 
 import javax.annotation.Nullable;
 import java.io.IOException;
@@ -167,8 +169,13 @@ public class IndyBootstrap {
      */
     private static final String INDY_BOOTSTRAP_CLASS_NAME = "java.lang.IndyBootstrapDispatcher";
     /**
+     * Needs to be loaded from the bootstrap CL because it uses {@link Unsafe}.
+     * In addition, needs to be loaded explicitly by name only when running on Java 9, because compiled with Java 9
+     */
+    private static final String INDY_BOOTSTRAP_MODULE_SETTER_CLASS_NAME = "co.elastic.apm.agent.bci.IndyBootstrapDispatcherModuleSetter";
+    /**
      * The class file of {@code java.lang.IndyBootstrapDispatcher}.
-     * Ends with {@code clazz} because if it ended with {@code clazz}, it would be loaded like a regular class.
+     * Ends with {@code clazz} because if it ended with {@code class}, it would be loaded like a regular class.
      */
     private static final String INDY_BOOTSTRAP_RESOURCE = "bootstrap/IndyBootstrapDispatcher.clazz";
     /**
@@ -178,12 +185,12 @@ public class IndyBootstrap {
     @Nullable
     static Method indyBootstrapMethod;
 
-    public static Method getIndyBootstrapMethod() {
+    public static Method getIndyBootstrapMethod(final Logger logger) {
         if (indyBootstrapMethod != null) {
             return indyBootstrapMethod;
         }
         try {
-            Class<?> indyBootstrapClass = initIndyBootstrap();
+            Class<?> indyBootstrapClass = initIndyBootstrap(logger);
             indyBootstrapClass
                 .getField("bootstrap")
                 .set(null, IndyBootstrap.class.getMethod("bootstrap", MethodHandles.Lookup.class, String.class, MethodType.class, Object[].class));
@@ -196,14 +203,40 @@ public class IndyBootstrap {
     /**
      * Injects the {@code java.lang.IndyBootstrapDispatcher} class into the bootstrap class loader if it wasn't already.
      */
-    private static Class<?> initIndyBootstrap() throws Exception {
+    private static Class<?> initIndyBootstrap(final Logger logger) throws Exception {
+        Class<?> indyBootstrapDispatcherClass;
         try {
-            return Class.forName(INDY_BOOTSTRAP_CLASS_NAME, false, null);
+            indyBootstrapDispatcherClass = Class.forName(INDY_BOOTSTRAP_CLASS_NAME, false, null);
         } catch (ClassNotFoundException e) {
             byte[] bootstrapClass = IOUtils.readToBytes(ClassLoader.getSystemClassLoader().getResourceAsStream(INDY_BOOTSTRAP_RESOURCE));
             ClassInjector.UsingUnsafe.ofBootLoader().injectRaw(Collections.singletonMap(INDY_BOOTSTRAP_CLASS_NAME, bootstrapClass));
+            indyBootstrapDispatcherClass = Class.forName(INDY_BOOTSTRAP_CLASS_NAME, false, null);
         }
-        return Class.forName(INDY_BOOTSTRAP_CLASS_NAME, false, null);
+
+        if (JvmRuntimeInfo.getMajorVersion() >= 9 && JvmRuntimeInfo.isJ9VM()) {
+            try {
+                logger.info("Overriding IndyBootstrapDispatcher class's module to java.base module. This is required in J9 VMs.");
+                setJavaBaseModule(indyBootstrapDispatcherClass);
+            } catch (Throwable throwable) {
+                logger.warn("Failed to setup proper module for the IndyBootstrapDispatcher class, instrumentation may fail", throwable);
+            }
+        }
+        return indyBootstrapDispatcherClass;
+    }
+
+    /**
+     * A package-private method for unit-testing of the module overriding functionality
+     *
+     * @param targetClass class for which module should be overridden with the {@code java.base} module
+     * @throws Throwable in case of any failure related to module overriding
+     */
+    static void setJavaBaseModule(Class<?> targetClass) throws Throwable {
+        // In order to override the original unnamed module assigned to the IndyBootstrapDispatcher, we rely on the
+        // Unsafe API, which requires the caller to be loaded by the Bootstrap CL
+        Class<?> moduleSetterClass = Class.forName(INDY_BOOTSTRAP_MODULE_SETTER_CLASS_NAME, false, null);
+        MethodHandles.lookup()
+            .findStatic(moduleSetterClass, "setJavaBaseModule", MethodType.methodType(void.class, Class.class))
+            .invoke(targetClass);
     }
 
     /**
